Package installable and runnable with Python 3.9+, Numpy <2,and Keras <3

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,9 +15,9 @@ requires-python = ">=3.9"
 dependencies = [
     "absl-py",
     "attrs",
-    "numpy",
+    "numpy<2.0.0",
     "scipy",
-    "tensorflow<2.12.0",
+    "tensorflow<2.16.0",
 ]
 
 [project.optional-dependencies]
